[package]
name = "pyd4"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4 = { git = "https://github.com/38/d4-format.git" }
pyo3 = "0.12.1"
rayon = "1.4.0"

[lib]
crate-type = ["cdylib"]
